@@ -261,6 +261,7 @@ Version 1.9.0-svn:
      the mouse.
    * Reducing cache loading for title screen, --test, --editor and --load
    * Removed Lua dependency, the source is now in the source tree
+   * Introduced a new allignement called "Liminal". Those units fight best during the twilight times of day.
    * Fixed #16343: wmllint wants to add translation markers to the empty string in description=
 
 Version 1.8.0:
